Se agrego la conexion a base de datos (se conecta desde el webConfig), se creo el DaoPagos.cs, se modificaron los Service1 y IService1 y el webconfig.

--- a/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.Excepciones/ServicioLotoUCAB.Servicio.Excepciones.csproj
+++ b/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.Excepciones/ServicioLotoUCAB.Servicio.Excepciones.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ServicioLotoUCAB.Servicio.Excepciones</RootNamespace>
     <AssemblyName>ServicioLotoUCAB.Servicio.Excepciones</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
