--- a/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.AccesoDatos/ServicioLotoUCAB.Servicio.AccesoDatos.csproj
+++ b/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.AccesoDatos/ServicioLotoUCAB.Servicio.AccesoDatos.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ServicioLotoUCAB.Servicio.AccesoDatos</RootNamespace>
     <AssemblyName>ServicioLotoUCAB.Servicio.AccesoDatos</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dao\DaoPagos.cs" />
     <Compile Include="Dao\DaoService.cs" />
     <Compile Include="FabricaDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
