--- a/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.Servicio/Web.config
+++ b/src/ServicioLotoUCAB.Servicio.Servicio/ServicioLotoUCAB.Servicio.Servicio/Web.config
@@ -16,7 +16,7 @@
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <connectionStrings>
-    <add name="LocalMySql" connectionString="Data Source=127.0.0.1; Database=proyecto; User Id=root; Password='battlefield3'" providerName="Mysql.Data.MysqlClient"/>
+    <add name="LocalMySql" connectionString="Data Source=127.0.0.1; Database=practica1; User Id=root; Password='battlefield3'" providerName="Mysql.Data.MysqlClient"/>
   </connectionStrings>
   <system.serviceModel>
     <behaviors>
